<resources>
    <string name="app_name">Spomoo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waterEpicText">You can do it! \n Drink some water 10 times per day!</string>
    <string name="title_login">Login</string>
    <string name="title_registration">Registration</string>
    <string name="waterEpicDesc">Congrats! You drank enough water for today! You can reset and track more if you want.</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_not_registered">Not registered yet? Click <u>here</u>!</string>
    <string name="login_not_verfified">Registration not completed? Click <u>here</u>!</string>
    <string name="login_invalid_email">Enter a valid eMail-Address</string>
    <string name="login_no_password">Enter your password</string>
    <string name="login_dialog_loading_title">Logging in</string>
    <string name="login_dialog_loading_content">Loading your uploaded data. Please do not close the app!</string>
    <string name="register_continue">Continue</string>
    <string name="register_change_data">Personal data can be changed in settings later</string>
    <string name="register_enter_username">Enter a Username</string>
    <string name="register_enter_email">Enter your eMail-Address</string>
    <string name="register_password_temporary_hint">Temporary Password</string>
    <string name="register_password_repeat_hint">Password (repeat)</string>
    <string name="register_password_requirements">Password must have minimum: \n one lower and upper case letter \n one digit \n one special symbol \n 6 characters</string>
    <string name="register_enter_all_passwords">Enter all fields</string>
    <string name="register_password_no_match">Passwords do not match</string>
    <string name="register_send_again">No eMail received?\nClick <u>here</u> to get a new eMail!</string>
    <string name="login_store_data_notification_channel">Saving Backup Service</string>
    <string name="login_store_data_notification_title">Saving Backup</string>
    <string name="request_permission_dialog_title">Permission Step Counter</string>
    <string name="request_permission_dialog_content">Please grant the following permission so that your steps can be counted</string>
    <string name="request_permission_dialog_okay">Okay</string>
    <string name="privacy_policy_dialog_title">Privacy Policy</string>
    <string name="privacy_policy_dialog_content">Please agree to our privacy policy.\nInformation about our privacy policy can be found <u>here</u>.</string>
    <string name="privacy_policy_dialog_yes">Agree</string>
    <string name="title_reset_password">Change Password</string>
    <string name="reset_password_new">New Password</string>
    <string name="reset_password_new_repeat">New Password (repeat)</string>
    <string name="reset_password_change">Change Password</string>
    <string name="reset_password_temporary_incorrect">Temporary password is incorrect</string>
    <string name="reset_password_success">Password changed</string>
    <string name="reset_password_email_not_exist">The eMail-Address is not registered</string>
    <string name="title_home">Home</string>
    <string name="title_record">Record</string>
    <string name="title_data">Data</string>
    <string name="title_settings">Settings</string>
    <string name="main_send_data_dialog_title">Sending Data</string>
    <string name="main_send_data_confirm_dialog_content">Do you want to send all your recorded and stored data to us?</string>
    <string name="main_send_data_confirm_dialog_yes">Yes, send data</string>
    <string name="main_send_data_confirm_dialog_no">No</string>
    <string name="main_send_data_dialog_content">Please do not close the app!</string>
    <string name="main_send_data_notification_channel">Send Data Service</string>
    <string name="main_send_data_notification_title">Sending Data</string>
    <string name="main_send_data_notification_content">Progress</string>
    <string name="main_send_data_notification_unit">%</string>
    <string name="main_send_data_finished">Finished sending data</string>
    <string name="main_record_heading_1">Record Sport</string>
    <string name="main_record_info_1">Record a sport activity live!</string>
    <string name="main_record_heading_2">Past Sport</string>
    <string name="main_record_info_2">Save a not recorded sport activity!</string>
    <string name="main_record_heading_3">Questionnaire</string>
    <string name="main_record_info_3">Answer a questionnaire about your mental health!</string>
    <string name="main_record_heading_4">Digit Span</string>
    <string name="main_record_info_4">Complete a Digit Span Task</string>
    <string-array name="sport_types_array">
        <item>Aerobics</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Beach-Volleyball</item>
        <item>Bicycling</item>
        <item>Bodyforming</item>
        <item>Bouldering</item>
        <item>Calisthenics</item>
        <item>Canoeing</item>
        <item>Capoeira</item>
        <item>Climbing</item>
        <item>Crossfit</item>
        <item>Cycling</item>
        <item>Dancing</item>
        <item>Freeclimbing</item>
        <item>Frisbee</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Gymnastics</item>
        <item>Handball</item>
        <item>Hiking</item>
        <item>Hockey</item>
        <item>Horse Riding</item>
        <item>Ice-Skating</item>
        <item>Ice-Hockey</item>
        <item>Inline Skating</item>
        <item>Jogging</item>
        <item>Judo</item>
        <item>Kitesurfing</item>
        <item>Marathon Run</item>
        <item>Mountain Biking</item>
        <item>Nordic Walking</item>
        <item>Pilates</item>
        <item>Rowing</item>
        <item>Rollerblading</item>
        <item>Running</item>
        <item>Sailing</item>
        <item>Skateboarding</item>
        <item>Skiing</item>
        <item>Skating</item>
        <item>Snowboarding</item>
        <item>Strength Training</item>
        <item>Surfing</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tai Chi</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Walking</item>
        <item>Water Aerobics</item>
        <item>Yoga</item>
        <item>Zumba</item>
    </string-array>
    <string name="record_live_sport_text">Enter sport activity</string>
    <string name="record_live_toggle_button_off">Record</string>
    <string name="record_live_toggle_button_on">Finish</string>
    <string name="record_live_notification_content">Time</string>
    <string name="record_live_notification_channel">Timer Recording</string>
    <string name="record_live_notification_unit">s</string>
    <string name="record_live_insert_sport">Enter a sport activity firstly</string>
    <string name="record_live_recorded">Sport activity recorded</string>
    <string name="save_past_sport_date">Date</string>
    <string name="save_past_sport_start">Starting Time</string>
    <string name="save_past_sport_start_enter">Select starting time</string>
    <string name="save_past_sport_duration">Duration</string>
    <string name="save_past_sport_duration_enter">Select duration</string>
    <string name="save_past_sport_save">Save</string>
    <string name="save_past_sport_missing">Enter all data</string>
    <string name="save_past_sport_saved">Sport activity saved</string>
    <string name="sport_intensity_title">Sport Intensity</string>
    <string name="sport_intensity_heading">How strenuous was the training for you?</string>
    <string name="sport_intensity_value">Level of Effort:</string>
    <string name="sport_intensity_value_1">not at all strenuous\n(no physical activity)</string>
    <string name="sport_intensity_value_2">extremely easy\n(low physical activity)</string>
    <string name="sport_intensity_value_3">very easy\n(like walking at your own pace)</string>
    <string name="sport_intensity_value_4">easy\n(like walking faster)</string>
    <string name="sport_intensity_value_5">somewhat strenuous\n(I can go on well with the load)</string>
    <string name="sport_intensity_value_6">strenuous\n(continuation is still possible)</string>
    <string name="sport_intensity_value_7">very strenuous\n(I will soon be exhausted)</string>
    <string name="sport_intensity_value_8">extremely strenuous\n(strongest load ever experienced)</string>
    <string name="sport_intensity_value_9">maximum load\n(overexertion)</string>
    <string name="sport_intensity_data">Intensity</string>
    <string name="questionnaire_skip"><u>Skip</u></string>
    <string name="questionnaire_saved">Answers saved</string>
    <string name="questionnaire_reminder_channel">Questionnaire Reminder</string>
    <string name="questionnaire_reminder_title">Questionnaire Reminder</string>
    <string name="questionnaire_reminder_content">Answer a questionnaire</string>
    <string name="title_questionnaire_mdbf">Questions MDBF</string>
    <string name="questionnaire_mdbf_heading1">MDBF</string>
    <string name="questionnaire_mdbf_heading2">In the last 24 hours I felt in average...</string>
    <string name="questionnaire_mdbf_satisfied_value">Satisfied:</string>
    <string name="questionnaire_mdbf_dissatisfied">dissatisfied</string>
    <string name="questionnaire_mdbf_satisfied">satisfied</string>
    <string name="questionnaire_mdbf_calm_value">Calm:</string>
    <string name="questionnaire_mdbf_restless">restless</string>
    <string name="questionnaire_mdbf_calm">calm</string>
    <string name="questionnaire_mdbf_well_value">Well:</string>
    <string name="questionnaire_mdbf_unwell">unwell</string>
    <string name="questionnaire_mdbf_well">well</string>
    <string name="questionnaire_mdbf_relaxed_value">Relaxed:</string>
    <string name="questionnaire_mdbf_tense">tense</string>
    <string name="questionnaire_mdbf_relaxed">relaxed</string>
    <string name="questionnaire_mdbf_energetic_value">Energetic:</string>
    <string name="questionnaire_mdbf_powerless">powerless</string>
    <string name="questionnaire_mdbf_energetic">energetic</string>
    <string name="questionnaire_mdbf_awake_value">Awake:</string>
    <string name="questionnaire_mdbf_awake">awake</string>
    <string name="questionnaire_mdbf_tired">tired</string>
    <string name="title_questionnaire_eventappraisal">Questions Events</string>
    <string name="questionnaire_eventappraisal_heading1">Event-Appraisal</string>
    <string name="title_questionnaire_socialcontext">Questions Social Surrounding</string>
    <string name="title_questionnaire_location">Questions Location</string>
    <string name="title_questionnaire_rumination">Questions Rumination</string>
    <string name="title_questionnaire_selfworth">Questions Self-Worth</string>
    <string name="title_questionnaire_impulsive">Questions Impulsiveness</string>
    <string name="title_questionnaire_message">Own Note</string>
    <string name="settings_edit_account_username">Username</string>
    <string name="settings_edit_account_email">eMail-Address (@gmail.com)</string>
    <string name="settings_edit_account_gender">Gender</string>
    <string name="settings_edit_account_birthday">Birthday</string>
    <string name="settings_edit_account_height">Body Height (cm)</string>
    <string name="settings_edit_account_weight">Body Weight (kg)</string>
    <string name="settings_data_privacy_title">Data Privacy</string>
    <string name="settings_data_privacy_send_email">If you have any questions regarding data protection, please feel free to send us an email.</string>
    <string name="settings_data_privacy_email_address">test@test.com</string>
    <string name="settings_data_privacy_content">Information about our data protection can be found <u>here</u>.</string>
</resources>